# simple-procedural-generation

./: CMakeLists.txt  README.md
include/: Elements.h  ElementsMath.h  Shaders.h
src/: Elements.cpp  ElementsMath.cpp  Shaders.cpp  main.cpp
